Résolution des conflits

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
   justify-content: flex-start;
   padding: 0;
   color: white;
-  background: url('images/poster2.jpg') center top/cover no-repeat;
+  background: url('images/poster4.jpeg') center top/cover no-repeat;
   background-attachment: scroll;
   overflow: hidden;
 }
